objects/Provisioning__c.object
<CustomObject>
    <fields>
        <fullName>ADSL_Ref_Line_1__c</fullName>
        <label>ADSL Ref Line 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADSL_Ref_Line_2__c</fullName>
        <label>ADSL Ref Line 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADSL_Ref_Line_3__c</fullName>
        <label>ADSL Ref Line 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_County__c</fullName>
        <label>A End County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Floor_Reference__c</fullName>
        <label>A End Floor Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Postcode__c</fullName>
        <label>A End Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Premises_Name__c</fullName>
        <label>A End Premises Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Room_Reference__c</fullName>
        <label>A End Room Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Street_Road_Name__c</fullName>
        <label>A End Street/Road Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Town__c</fullName>
        <label>A End Town</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provisioning</relationshipLabel>
        <relationshipName>Provisioning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_Entanet_CPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Entanet CPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Controlled_Call_Divert_Number__c</fullName>
        <label>Admin Controlled Call Divert Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Amount_of_Multilines__c</fullName>
        <label>Amount of Multilines</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anonymous_Call_Rejection__c</fullName>
        <label>Anonymous Call Rejection</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appt_Selection_1__c</fullName>
        <label>Appt Selection</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appt_Selection_2__c</fullName>
        <label>Appt Selection</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appt_Selection__c</fullName>
        <label>Appt Selection</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asbestos_or_H_S_Register_onsite__c</fullName>
        <label>Asbestos or H &amp; S Register onsite?</label>
        <picklist>
            <picklistValues>
                <fullName>Neither</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asbestos Register</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Safety Register</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backup_Reference__c</fullName>
        <label>Backup Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backup Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bar_use_of_call_return_1471__c</fullName>
        <label>Bar use of call return (1471)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bond_Type__c</fullName>
        <label>Bond Type</label>
        <picklist>
            <picklistValues>
                <fullName>Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmanaged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonded_Downstream_Speed__c</fullName>
        <label>Bonded Downstream Speed</label>
        <picklist>
            <picklistValues>
                <fullName>Up to 8Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 24Mbps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonded_IP_Addresses__c</fullName>
        <label>Bonded IP Addresses</label>
        <picklist>
            <picklistValues>
                <fullName>NAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Nat 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Nat 16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Nat 32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Nat 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PWAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonded_Interleaving__c</fullName>
        <label>Bonded Interleaving</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonded_Maintenance_Category__c</fullName>
        <label>Bonded Maintenance Category</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonded_Product__c</fullName>
        <label>Bonded Product</label>
        <picklist>
            <picklistValues>
                <fullName>Bonded 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonded 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonded 180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>etc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonded_Stability_Option__c</fullName>
        <label>Bonded Stability Option</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Stable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonded_Technology_Type__c</fullName>
        <label>Bonded Technology Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Date - 512k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Rate - 1024MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Rate - 2048MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Adaptive ADSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Adaptive ADSL2+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonded_Traffic_Weighting__c</fullName>
        <label>Bonded Traffic Weighting</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elevated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonded_Upstream_Speed__c</fullName>
        <label>Bonded Upstream Speed</label>
        <picklist>
            <picklistValues>
                <fullName>Up to 448Kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncapped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annex M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broadband_Line_Number__c</fullName>
        <label>Broadband Line Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CPP_Reference__c</fullName>
        <label>CPP Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cable_Reference__c</fullName>
        <label>Cable Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cable_Type__c</fullName>
        <label>Cable Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cat5-RJ45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibre</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Barring__c</fullName>
        <label>Call Barring</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Controlled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Controlled with Bypass Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Controlled: All Incoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Controlled: OCB (except 999 &amp; Freephone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Controlled: OCB (all calls, including 999)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Controlled: Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Controlled: Premium &amp; International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Diversion__c</fullName>
        <label>Call Diversion</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Controlled (No Announcement)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Divert with Bypass Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Controlled (Announcement) Bypass Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCD Anytime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Divert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Controlled (Announcement)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Controlled Divert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Sign__c</fullName>
        <label>Call Sign</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Waiting__c</fullName>
        <label>Call Waiting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Called_Party_Answer__c</fullName>
        <label>Called Party Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Caller_Display__c</fullName>
        <label>Caller Display</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Care_Level__c</fullName>
        <label>Care Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carrier_s_Termination_equipment_install__c</fullName>
        <label>Carrier&apos;s Termination equipment install?</label>
        <picklist>
            <picklistValues>
                <fullName>Wall Mounted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rack Mounted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabinet Mounted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Choose_to_Refuse__c</fullName>
        <label>Choose to Refuse</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector__c</fullName>
        <label>Connector</label>
        <picklist>
            <picklistValues>
                <fullName>LC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <label>Contract Length</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>B End County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_EDD__c</fullName>
        <label>Current EDD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_AS_Macro__c</fullName>
        <label>Customer AS Macro</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_AS_Number__c</fullName>
        <label>Customer AS Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Location__c</fullName>
        <label>Customer Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Ticket_Ref__c</fullName>
        <label>Customer Ticket Ref</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Centre_Cab_Location__c</fullName>
        <label>Data Centre Cab Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Connect_Number__c</fullName>
        <label>Direct Connect Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Direct_Connect__c</fullName>
        <label>Direct Connect</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Directory_Entry__c</fullName>
        <label>Directory Entry</label>
        <picklist>
            <picklistValues>
                <fullName>&apos;O&apos; Ordinary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&apos;DQR&apos; Directory Enquiries Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&apos;XDNC&apos; Ex Directory - No calls offered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Directory_Honours_e_g_OBE__c</fullName>
        <label>Directory Honours: e.g. OBE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Inital_Name_or_Business_Desc__c</fullName>
        <label>Directory Inital/Name or Business Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Location__c</fullName>
        <label>Directory Location</label>
        <picklist>
            <picklistValues>
                <fullName>Business Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Listing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Directory_Surname_or_Business_Name__c</fullName>
        <label>Directory Surname or Business Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Title__c</fullName>
        <label>Directory Title</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_occupy_the_premises__c</fullName>
        <label>Do you currently occupy the premises?</label>
        <picklist>
            <picklistValues>
                <fullName>Already Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting to Move In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Downstream_Speed__c</fullName>
        <label>Downstream Speed</label>
        <picklist>
            <picklistValues>
                <fullName>Up to 8Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 24Mbps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Name_for_999__c</fullName>
        <label>End User Name for 999</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entanet_Delivered__c</fullName>
        <label>Entanet Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entanet_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entanet Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entanet_Location__c</fullName>
        <label>Entanet Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entanet_Status__c</fullName>
        <label>Entanet Status</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting ADSL Backup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoicing Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold - Awaiting info from Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold - Customer Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold - Excess Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold - Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold - Wayleave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - 10 days to completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - 5 days to completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Order Progressing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Pending Entanet Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Supplier Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Supplier Update Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Excess_Charges__c</fullName>
        <label>Excess Charges</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Fibre_delivered_to_site__c</fullName>
        <label>Existing Fibre delivered to site?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Alternative_Date__c</fullName>
        <label>First Alternative Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Invoice_Date__c</fullName>
        <label>First Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Invoice_Number__c</fullName>
        <label>First Invoice Number</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Floor_Reference__c</fullName>
        <label>B End Floor Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forename__c</fullName>
        <label>Forename</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping_Number__c</fullName>
        <label>Grouping Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hardware_Delivery_Address__c</fullName>
        <label>Hardware Delivery Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hardware_Delivery_Contact_Name__c</fullName>
        <label>Hardware Delivery Contact Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Addresses__c</fullName>
        <label>IP Addresses</label>
        <picklist>
            <picklistValues>
                <fullName>NAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Nat 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Nat 16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Nat 32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Nat 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PWAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_Charges__c</fullName>
        <label>IP Charges</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>If_yes_do_you_want_to_retain_CPS__c</fullName>
        <label>If yes, do you want to retain CPS?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Jeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indirect_Access_Call_Barring__c</fullName>
        <label>Indirect Access Call Barring</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Fee__c</fullName>
        <label>Install Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Ticket_Ref__c</fullName>
        <label>Install Ticket Ref</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Site_Contact_Email__c</fullName>
        <label>Installation Site Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Installation_Site_Contact_Name__c</fullName>
        <label>Installation Site Contact Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Site_Contact_Phone__c</fullName>
        <label>Installation Site Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Installation_Site_Contact_same_as_te__c</fullName>
        <label>Site Contact same as technical contact?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interconnect_Details__c</fullName>
        <label>Interconnect Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interleaving__c</fullName>
        <label>Interleaving</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_line_CPS_ed_with_Entanet__c</fullName>
        <label>Is the line CPS&apos;ed with Entanet?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_there_a_service_manager_onsite__c</fullName>
        <label>Is there a service manager onsite?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_a_3rd_party_data_centre__c</fullName>
        <label>Is this a 3rd party data centre?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_line_CPS_ed__c</fullName>
        <label>Is this line CPS&apos;ed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_property_owned_or_leased_by_you__c</fullName>
        <label>Is this property owned or leased by you?</label>
        <picklist>
            <picklistValues>
                <fullName>Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Landlord_Consent_given__c</fullName>
        <label>Landlord Consent given?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_1_Line_Number__c</fullName>
        <label>Line 1 - Line Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Line_1_MAC_Code__c</fullName>
        <label>Line 1 - MAC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_1_Sim_Reference__c</fullName>
        <label>Line 1 - Sim Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_1_Simultaneous_Order__c</fullName>
        <label>Line 1 - Simultaneous Order</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_2_Line_Number__c</fullName>
        <label>Line 2 - Line Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Line_2_MAC_Code__c</fullName>
        <label>Line 2 - MAC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_2_Simultaneous_Order_Reference__c</fullName>
        <label>Line 2 - Simultaneous Order Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_2_Simultaneous_Order__c</fullName>
        <label>Line 2 - Simultaneous Order</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_3_Line_Number__c</fullName>
        <label>Line 3 - Line Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Line_3_MAC_Code__c</fullName>
        <label>Line 3 - MAC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_3_Simultaneous_Order_Reference__c</fullName>
        <label>Line 3 - Simultaneous Order Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>